--- a/style.css
+++ b/style.css
@@ -9,7 +9,36 @@ body {
     background-color: aquamarine;
     height: 73px;
 }
-
+a:hover, a:visited, a:link, a:active{
+    text-decoration: none;
+    color: black;
+}
 .links {
     display: flex;
+    font-size: 20px;
+    align-items: flex-end;
 }
+
+.links div {
+    margin-left: 30px;
+    padding-bottom: 5px;
+}
+
+.pageTitle {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+    font-size: 40px;
+    padding-right: 900px;
+}
+
+button {
+    background: none!important;
+    border: none;
+    padding: 0!important;
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
+  }
