--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     width: auto;
     background-color: aquamarine;
     height: 73px;
+    margin-bottom: 25px;
 }
 a:hover, a:visited, a:link, a:active{
     text-decoration: none;
@@ -41,4 +42,14 @@ button {
     cursor: pointer;
     font-size: 20px;
     font-family: 'Times New Roman', Times, serif;
+  }
+
+  .aboutMe {
+    border: 5px solid black;
+    margin-top: 20px;
+    width: 1370px;
+    height: 400px;
+    display: flex;
+    margin: auto;
+    border-radius: 25px;
   }
