--- a/style.css
+++ b/style.css
@@ -109,6 +109,10 @@ button {
     height: 490px;
     margin-right: 10px;
     border-radius: 25px;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: center;
   }
 
   .lang #header {
@@ -122,5 +126,19 @@ button {
   }
 
   .lang #list ul li {
+    padding-top: 15px;
+  }
+
+  .projects #header {
+    font-size: 40px;
+    padding-top: 10px;
+  }
+
+  .projects #projectLinks ul {
+    list-style-type: none;
+    font-size: 30px;
+  }
+
+  .projects #projectLinks ul li {
     padding-top: 15px;
   }
