--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 body {
     font-family: 'Times New Roman', Times, serif;
     margin: 0;
+    background-color: #f6f8ff
 }
 
 .header {
     display: flex;
     width: auto;
-    background-color: aquamarine;
+    background-color: #acabc5;
     height: 73px;
     margin-bottom: 25px;
 }
@@ -141,4 +142,14 @@ button {
 
   .projects #projectLinks ul li {
     padding-top: 15px;
+  }
+
+  .footer {
+    display: flex;
+    padding-top: 20px;
+    margin: 0;
+    height: 60px;
+    background-color: #acabc5;
+    justify-content: center;
+    font-size: 25px;
   }
